# virus

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  a.html  config.ron
benches/: complete_or_last.rs
examples/: average.rs  infection_probability.rs  plotings.rs  simulation.rs  terminal.rs
examples/wasm/: Cargo.toml  README.md  copy.html  package.json
examples/wasm/js/: index.js
examples/wasm/src/: lib.rs
examples/wasm/static/: index.html
examples/web_app/: Cargo.toml  LICENSE_MIT  README.md  bleibhausen-simulation.html
examples/web_app/src/: debug.rs  lib.rs
examples/web_app/www/: README.md  bootstrap.js  index.html  index.js  package-lock.json
examples/yew_app/: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
examples/yew_app/src/: board.rs  debugging.rs  displaying.rs  lib.rs  main - Copy.rs  main.rs
examples/yew_app/static/: README.md  index.html  wasm.js  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
releases/research/v0.0.2/: config.ron  v002simulation_release.rar
releases/research/v0.0.3/: v0.0.3.rar
sim/: README.md  index.css  index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm
src/: board.rs  building.rs  individual.rs  lib.rs  population.rs  recording.rs  simulation.rs
src/recording/: counting_table.rs
src/simulation/: report.rs
src/simulation/report/: last_day.rs
