[package]
name = "virus_alert"
version = "0.1.0"
authors = ["raimundo saona <rasa200@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
thiserror = "1.0.22"
gamma = "0.8.1"
rand = "0.7.3"
strum = "0.20.0"
strum_macros = "0.20.1"
getset = "0.1.1"

[dev-dependencies]
test-case = "1.0.0"
rand_pcg = "0.2.1"
