[package]
name = "virus_alert"
version = "0.1.0"
authors = ["raimundo saona <rasa200@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
thiserror = "1.0.22"
gamma = "0.8.1"
rand = { version = "0.7.3" }
strum = "0.20.0"
strum_macros = "0.20.1"
getset = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.5"
average = "0.10.6"

[features]
wasm-bindgen = ["rand/wasm-bindgen"]

[dev-dependencies]
test-case = "1.0.0"
rand_pcg = "0.2.1"
ron = "0.6.2"
preexplorer = "0.3.4"
anyhow = "1.0.35"
