[package]
name = "yew_app"
version = "0.1.0"
edition = "2018"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew"]
categories = ["gui", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
virus_alarm = { path = "../..", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.6"